deployment/k8s/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: emr-staging
  labels:
    name: emr-staging
    environment: staging
    project: emr-blockchain
